# gtk-pokemon-list

./: Cargo.toml
src/: main.rs
