[package]
name = "gtk-pokemon-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_8"] }
ashpd = { version = "0.6.7", features = ["gtk4"] }
async-channel = "2.1.1"
futures = "0.3.30"

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
glib-build-tools = "0.18.0"

